# slobo-memes

./: .gitignore  README.md  app.py  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: pylint.yml
bot/: Dockerfile  pyproject.toml  setup.cfg
bot/config/: .env.example  logging.conf.yml  settings.py
bot/src/: app.py  background_tasks.py  bot.py  logger.py  metrics.py
bot/src/api/: __init__.py  bot.py  health.py  metrics.py
bot/src/handlers/: __init__.py  add_meme.py  change_visibility.py  delete_meme.py  list_saved.py  main_menu.py  meme_saves.py  popular.py  random_meme.py  rate_meme.py  start.py
bot/src/keyboards/: main_menu.py  meme.py  request_meme.py  start.py
bot/src/middlewares/: chat_action.py  state.py
bot/src/states/: states.py
bot/src/storage/: rabbitmq.py
bot/src/templates/: caption_too_long.jinja2  env.py  main_menu.jinja2  meme.jinja2  no_photo_in_meme.jinja2  request_meme.jinja2  start.jinja2
bot/src/utils/: edit_or_send_message.py  image.py  mark.py  random_type.py  upload_image.py
bot/tests/: conftest.py
bot/tests/common/: conftest.py
bot/tests/common/list_saved/: test_list_saved.py
bot/tests/mocking/: rabbit.py  tg.py
config/: settings.py
consumer/storage/: rabbit.py
database/: Dockerfile  alembic.ini  pyproject.toml  setup.cfg
database/alembic/: env.py
database/alembic/versions/: 188a09cc96fa_.py  495fed328af2_meme_model.py  761a2a6a86b3_add_nullable_description.py  f158b8fba192_init.py
database/config/: .env.example  logging.conf.yml  settings.py
database/src/: app.py  logger.py
database/src/enums/: __init__.py  meme_rate.py  meme_visibility.py
database/src/handlers/: add_meme.py  change_visibility.py  delete_meme.py  list_saved.py  meme_saves.py  popular.py  random_meme.py  rate_meme.py
database/src/models/: __init__.py  meta.py  models.py
database/src/schema/: meme.py
database/src/services/: meme.py
database/src/storage/: database.py  rabbitmq.py
database/src/utils/: image.py  inject_database.py
database/tests/: conftest.py
database/tests/common/: conftest.py
database/tests/common/consumer/test_handle_meme/: test_handle_meme.py
database/tests/common/handle_meme/: test_handle_meme.py
database/tests/common/list_saved/: test_list_saved.py
database/tests/mocking/: rabbit.py  tg.py
prometheus/: prometheus_config.yml
rabbitmq/: setup.cfg
rabbitmq/config/: .env.example
scripts/: flake8_walk.sh  rebuild.sh  start.sh  start_with_logs.sh  stop.sh
src/: app.py
src/api/: __init__.py  meme.py  router.py
src/api/basket/: __init__.py  private.py  public.py
src/schemas/: meme.py
tests/: alembic.ini  conftest.py  pyproject.toml
tests/alembic/: env.py
tests/common/: conftest.py
tests/common/consumer/test_handle_meme/: test_handle_meme.py
tests/common/consumer/test_handle_meme/seeds/: public.meme.json
tests/config/: settings.py
tests/mocking/: rabbit.py
