[tool.poetry]
name = "slobo-memes"
version = "0.1.0"
description = ""
authors = ["roganofff <matematic1337@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
