[tool.poetry]
name = "default-project"
version = "0.1.0"
description = ""
authors = ["rTiRe <zientenin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.1"
fastapi = "^0.115.4"
pydantic-settings = "^2.6.1"
starlette-context = "^0.3.6"
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
