[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["rTiRe <zientenin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.1"
fastapi = "^0.115.4"
pydantic-settings = "^2.6.1"
starlette-context = "^0.3.6"
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"
aio-pika = "^9.5.0"
msgpack = "^1.1.0"
pytest-mock = "^3.14.0"
asgi-lifespan = "^2.1.0"
aiohttp = "3.9.5"
asyncpg = "0.29.0"
orjson = "3.10.6"
pydantic = "2.8.2"
pyyaml = "^6.0"
sqlalchemy = "2.0.31"
alembic = "1.13.2"
pyjwt = "^2.9.0"
greenlet = "^3.0.3"
uvloop = "^0.20.0"
redis = "^5.0.8"
hiredis = "^3.0.0"
msgpack-types = "^0.5.0"
prometheus-client = "^0.21.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
