[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["rTiRe <zientenin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"
aio-pika = "^9.5.0"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
msgpack = "^1.1.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
aiohttp = "^3.9.5"
orjson = "3.10.6"
pydantic = "2.8.2"
pyyaml = "^6.0"
pyjwt = "^2.9.0"
greenlet = "^3.0.3"
aiogram = "^3.13.0"
redis = "^5.0.8"
hiredis = "^3.0.0"
starlette-context = "^0.3.6"
jinja2 = "^3.1.4"
msgpack-types = "^0.5.0"
prometheus-client = "^0.21.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
asgi-lifespan = "^2.1.0"
mypy = "^1.13.0"
asyncpg-stubs = "^0.30.0"
types-pyyaml = "^6.0.12.20240917"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy",
]
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = false
exclude = [
    "^conf/",
    "^tests/",
    "^utils/",
    "^.venv/",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false  # to allow parsing
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "prometheus_client.*",
    "starlette_prometheus.*",
    "uvicorn.*",
]
ignore_missing_imports = true
